--- a/extended/app/manifest.yml
+++ b/extended/app/manifest.yml
@@ -2,11 +2,12 @@
 manifest_version: 1
 
 version:
-  name: Add
+  name: Dev
   label: "Dev Version"
   comment: "Default version used for development. Override for actual deployment."
 
 artifacts:
   setup_script: setup_script.sql
   readme: README.md
-  default_streamlit: code_schema.add
+  default_streamlit: code.add
+  extension_code: true 
