--- a/basic/app/manifest.yml
+++ b/basic/app/manifest.yml
@@ -2,8 +2,8 @@
 # This file defines properties required by the application package, including the location of the setup script and version definitions.
 # Refer to https://docs.snowflake.com/en/developer-guide/native-apps/creating-manifest for a detailed understanding of this file. 
 
--manifest_version: 1
--
--artifacts:
--  setup_script: setup_script.sql
--  readme: README.md
+manifest_version: 1
+
+artifacts:
+  setup_script: setup_script.sql
+  readme: README.md
