--- a/extended/app/manifest.yml
+++ b/extended/app/manifest.yml
@@ -9,5 +9,5 @@ version:
 artifacts:
   setup_script: setup_script.sql
   readme: README.md
-  default_streamlit: code.add
+  default_streamlit: core.add
   extension_code: true 
