--- a/streamlit-java/app/manifest.yml
+++ b/streamlit-java/app/manifest.yml
@@ -9,5 +9,5 @@ version:
 artifacts:
   setup_script: setup_script.sql
   readme: README.md
-  default_streamlit: core.add
+  default_streamlit: core.ui
   extension_code: true 
