--- a/streamlit-java/src/module-ui/src/environment.yml
+++ b/streamlit-java/src/module-ui/src/environment.yml
@@ -2,3 +2,5 @@
 # For more details, refer to https://docs.snowflake.com/en/developer-guide/streamlit/create-streamlit-sql#label-streamlit-install-packages-manual
 channels:
 - snowflake
+dependencies:
+- streamlit=1.22
