--- a/streamlit-python/local_test_env.yml
+++ b/streamlit-python/local_test_env.yml
@@ -7,7 +7,7 @@ dependencies:
   - pip
   - pip:
       - pytest
-      - snowflake-cli-labs
+      - snowflake-cli-labs>=2.0.0
       - snowflake-snowpark-python>=1.15.0
       - streamlit>=1.28.0 # this version could be different than the streamlit version in Snowflake, and therefore, 100% compatibility is not guaranteed.
 
